src/client/styles/styles.less
@color_orange: #F57C00;
@color_orange_light: #FFA726;
@color_black: rgba(0, 0, 0, 0.87);
@color_darker: rgba(0, 0, 0, 0.15);

body {
    line-height: 23px;
    color: #666;
    background: #1f1f1f;
    font-family: Open Sans Regular,Helvetica Neue,Helvetica,Arial,sans-serif;
    font-size: 14px;
    line-height: 1.71428571;
    overflow-x: hidden;
}

a {
  color: @color_orange_light;
}
a:hover {
  color: @color_orange;
  text-decoration: none;
}

label {
    font-weight: 400;
    color: #999;
    display: inline-block;
    margin-bottom: 5px;
}

.logo {
  font-size: 80px;
  color: @color_orange_light;
  margin-bottom: 45px;
}

.navbar-brand {
  color: @color_orange_light !important;
}

.navbar-inverse {
  background-color: #000000;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.logo strong, .navbar-brand strong {
    color: @color_orange;
}

.form-control {
  height: 40px;
  border: none;
  background-color: rgba(0, 0, 0, .15);
  border-radius: 2px;
}

.form-control:focus {
  border-color: @color_orange;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 167, 38, .6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 167, 38, .6);
}

.text-orange {
  color: @color_orange;
}

.btn-orange {
  border: 1px solid @color_orange;
  color: rgba(255, 167, 38, .6);
  background-color: @color_darker;
}

.btn-header {
    padding-top: 8px;
}

.btn-orange:hover {
  color: rgba(255, 167, 38, .6);
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 167, 38, .6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 167, 38, .6);
}

.login-form {
  margin-top: 70px;
}

#loading-bar .bar {
  background: @color_orange;
  height: 5px;
}

#loading-bar-spinner .spinner-icon {
  width: 14px;
  height: 14px;
  border:  solid 2px transparent;
  border-top-color:  @color_orange;
  border-left-color: @color_orange;
  border-radius: 50%;
}

.subsonic-brand {
  height: 64px;
}

/* Sidebar Styles */
#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: @color_darker;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 15px;
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    margin-top: 70px;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li.active {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    border-left: 4px solid transparent;
    color: #999999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    border-left-color: #c74b00;
    color: #fff;
    background: rgba(255, 255, 255, 0.05);
}

.sidebar-nav li.active a {
    text-decoration: none;
    border-left-color: #ff7d2e;
    color: #fff;
    background: rgba(255, 255, 255, 0.05);
}


.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav li a i {
  margin-right: 10px;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

@media(min-width:768px) {
    #wrapper {
        padding-left: 0;
    }

    #wrapper.toggled {
        padding-left: 250px;
    }

    #sidebar-wrapper {
        width: 0;
        box-shadow: 5px 0 10px -5px #000;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 250px;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}
/* End Sidebar Styles */

.page-header {
  font-weight: 100;
  font-size: 36px;
  padding: 12px 24px;
  border-bottom: 1px solid #282828;
  min-height: 96px;
  position: relative;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

/* Album Styles */
.padder {
    padding-top: 15px;
    padding-bottom: 15px;
}

.album {
    position: relative;
}

.bg-black-opacity {
    background-color: rgba(32,43,54,.5);
}

.album .center {
    top: 50%;
    margin-top: -15px;
    cursor: pointer;
}

.album .center, .album-overlay {
    position: absolute;
}

.album-overlay.active, .album:hover .album-overlay {
    display: block;
}

.img-full, .img-full img {
    width: 100%;
}

.text-ellipsis {
    text-overflow: ellipsis;
}

a.album-text {
  display: block;
}

.album-text {
  display: block;
}

.album-overlay {
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: none;
}

.pos-rlt {
    position: relative;
}

.w-full {
    width: 100%;
}
/* End Album styles */

/* Audio player */
videogular,
videogular.audio vg-controls #controls-container{
  background-color: inherit !important;
}
videogular vg-controls #controls-container{
  opacity: 1 !important;
  filter: none !important;
}

videogular vg-controls{
  top: auto !important;
  bottom: 0;
}

videogular vg-poster-image img{
  width: 100% !important;
}

videogular.audio .iconButton,
videogular.audio vg-time-display {
  color: inherit !important;
}

videogular vg-time-display{
  font-family: inherit !important;
  font-size: inherit !important;
}

videogular vg-scrub-bar > div {
  position: relative;
}

videogular vg-title {
  position: absolute;
  width: 100%;
  line-height: 50px;
  padding: 0 10px;
}

videogular vg-button{
  display: table-cell;
  width: 50px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
}

videogular .iconButton:focus {
  border-width: 0 !important;
}


.videogular-container.audio {
  height: 50px;
}

.videogular-container {
    background-color: #000;
}

.app-footer {
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1005;
}

.song-progress {
    border: solid .5em transparent;
}

.progress {
    height: 5px;
    margin: 0 0 5px 0!important;
}

.progress-bar {
    background-color: #c74b00;
}

videogular vg-scrub-bar .container, [videogular] vg-scrub-bar .container {
    top: 0 !important;
    color: #c74b00
}

videogular vg-scrub-bar [role=slider], [videogular] vg-scrub-bar [role=slider] {
    height: 0px !important;
}
/* End Audio player */

.playlist {
  background-color: #000;
  min-width: 250px;
  border-radius: 5px;
  padding: 10px;
}

.playlist li {
  padding: 5px;
}

.playlist li.active {
  transition: all 0.5s ease;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 167, 38, .6);
}


@media (max-width: 480px) {
    .logo {
        font-size: 40px;
    }

    .login-form {
      margin-top: 40px;
    }
}

